@startuml class_diagram

class TravelPackage {
    +id : int
    +name : string
    +description : string
    +price : float
    +duration : int
    +destination : string
    +__construct(id, name, description, price, duration, destination)
    +displayDetails() : string
}

class Customer {
    +id : int
    +name : string
    +email : string
    +phone : string
    +__construct(id, name, email, phone)
    +getContactInfo() : string
}

class Booking {
    +id : int
    +customer : Customer
    +travelPackage : TravelPackage
    +bookingDate : string
    +__construct(id, customer, travelPackage, bookingDate)
    +getBookingDetails() : string
}

class Payment {
    +id : int
    +booking : Booking
    +amount : float
    +paymentDate : string
    +status : string
    +__construct(id, booking, amount, paymentDate, status)
    +getPaymentDetails() : string
}

class ServicesDecorator {
    #description : string
    #price : float
    +getDescription() : string
    +getPrice() : float
}

class Trip {
    +__construct()
}

class Flight {
    +__construct(service : ServicesDecorator)
    +getDescription() : string
    +getPrice() : float
}

class Meals {
    +__construct(service : ServicesDecorator)
    +getDescription() : string
    +getPrice() : float
}

class Accommodation {
    +__construct(service : ServicesDecorator)
    +getDescription() : string
    +getPrice() : float
}

class SignUpStrategy {
    +signUp(data : array) : string
}

class ManualSignUp {
    +signUp(data : array) : string
}

class FacebookSignUp {
    +signUp(data : array) : string
}

class GoogleSignUp {
    +signUp(data : array) : string
}

class Connection {
    -host : string
    -db_name : string
    -username : string
    -password : string
    -conn : mysqli
    +getInstance() : Connection
    +getConnection() : mysqli
}

Customer "1" -- "*" Booking : makes
TravelPackage "1" -- "*" Booking : is booked in
Booking "1" -- "1" Payment : has
ServicesDecorator <|-- Trip
ServicesDecorator <|-- Flight
ServicesDecorator <|-- Meals
ServicesDecorator <|-- Accommodation
SignUpStrategy <|.. ManualSignUp
SignUpStrategy <|.. FacebookSignUp
SignUpStrategy <|.. GoogleSignUp

@enduml
